syntax = "proto3";

package main;

option go_package = "./proto";

// 添加购物车表
message AddCartItemReq {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  int64 product_sku_id = 3; //商品库存id
  int64 member_id = 4; //会员id
  int32 quantity = 5; //购买数量
  int64 price = 6; //添加到购物车的价格
  string product_pic = 7; //商品主图
  string product_name = 8; //商品名称
  string product_sub_title = 9; //商品副标题（卖点）
  string product_sku_code = 10; //商品sku条码
  string member_nickname = 11; //会员昵称
  int32 delete_status = 14; //是否删除
  int64 product_category_id = 15; //商品分类
  string product_brand = 16; //商品品牌
  string product_sn = 17; //货号
  string product_attr = 18; //商品销售属性:[{"key":"颜色","value":"颜色"},{"key":"容量","value":"4G"}]
}

message AddCartItemResp {
  string pong = 1;
}

// 删除购物车表
message DeleteCartItemReq {
  repeated int64 ids = 1;
  int64      member_id = 2;
}

message DeleteCartItemResp {
  string pong = 1;
}

// 更新购物车表
message UpdateCartItemReq {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  int64 product_sku_id = 3; //商品库存id
  int64 member_id = 4; //会员id
  int32 quantity = 5; //购买数量
  int64 price = 6; //添加到购物车的价格
  string product_pic = 7; //商品主图
  string product_name = 8; //商品名称
  string product_sub_title = 9; //商品副标题（卖点）
  string product_sku_code = 10; //商品sku条码
  string member_nickname = 11; //会员昵称
  int32 delete_status = 14; //是否删除
  int64 product_category_id = 15; //商品分类
  string product_brand = 16; //商品品牌
  string product_sn = 17; //货号
  string product_attr = 18; //商品销售属性:[{"key":"颜色","value":"颜色"},{"key":"容量","value":"4G"}]


}

message UpdateCartItemResp {
  string pong = 1;
}

// 修改购物车中某个商品的数量
message UpdateCartItemQuantityReq {
  int32 quantity = 1; //购买数量
  int64 id = 2; //
  int64 member_id = 3; //会员id

}

message UpdateCartItemQuantityResp {
  string pong = 1;
}
// 查询购物车表详情
message QueryCartItemDetailReq {
  int64 id = 1;
}

message QueryCartItemDetailResp {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  int64 product_sku_id = 3; //商品库存id
  int64 member_id = 4; //会员id
  int32 quantity = 5; //购买数量
  int64 price = 6; //添加到购物车的价格
  string product_pic = 7; //商品主图
  string product_name = 8; //商品名称
  string product_sub_title = 9; //商品副标题（卖点）
  string product_sku_code = 10; //商品sku条码
  string member_nickname = 11; //会员昵称
  string create_time = 12; //创建时间
  string update_time = 13; //更新时间
  int32 delete_status = 14; //是否删除
  int64 product_category_id = 15; //商品分类
  string product_brand = 16; //商品品牌
  string product_sn = 17; //货号
  string product_attr = 18; //商品销售属性:[{"key":"颜色","value":"颜色"},{"key":"容量","value":"4G"}]

}

// 分页查询购物车表列表
message QueryCartItemListReq {
  int64 member_id = 1; //会员id
}

message CartItemListData {
  int64 id = 1; //
  int64 product_id = 2; //商品id
  int64 product_sku_id = 3; //商品库存id
  int64 member_id = 4; //会员id
  int32 quantity = 5; //购买数量
  int64 price = 6; //添加到购物车的价格
  string product_pic = 7; //商品主图
  string product_name = 8; //商品名称
  string product_sub_title = 9; //商品副标题（卖点）
  string product_sku_code = 10; //商品sku条码
  string member_nickname = 11; //会员昵称
  string create_time = 12; //创建时间
  string update_time = 13; //更新时间
  int32 delete_status = 14; //是否删除
  int64 product_category_id = 15; //商品分类
  string product_brand = 16; //商品品牌
  string product_sn = 17; //货号
  string product_attr = 18; //商品销售属性:[{"key":"颜色","value":"颜色"},{"key":"容量","value":"4G"}]

}

message QueryCartItemListResp {
  int64 total = 1;
  repeated  CartItemListData list = 2;
}

// 购物车表
service CartItemService {
  // 添加购物车表
  rpc AddCartItem(AddCartItemReq) returns (AddCartItemResp){}
  // 删除购物车表
  rpc DeleteCartItem(DeleteCartItemReq) returns (DeleteCartItemResp){}
  // 更新购物车表
  rpc UpdateCartItem(UpdateCartItemReq) returns (UpdateCartItemResp){}
  //修改购物车中某个商品的数量
  rpc UpdateCartItemQuantity(UpdateCartItemQuantityReq) returns (UpdateCartItemQuantityResp){}
  // 查询购物车表详情
  rpc QueryCartItemDetail(QueryCartItemDetailReq) returns (QueryCartItemDetailResp){}
  // 查询购物车表列表
  rpc QueryCartItemList(QueryCartItemListReq) returns (QueryCartItemListResp){}


}
