syntax = "proto3";

package main;

option go_package = "./proto";

// 添加订单退货申请
message AddOrderReturnApplyReq {
  int64 id = 1; //
  int64 order_id = 2; //订单id
  int64 company_address_id = 3; //收货地址表id
  int64 product_id = 4; //退货商品id
  string order_sn = 5; //订单编号
  string member_username = 7; //会员用户名
  int64 return_amount = 8; //退款金额
  string return_name = 9; //退货人姓名
  string return_phone = 10; //退货人电话
  int32 status = 11; //申请状态：0->待处理；1->退货中；2->已完成；3->已拒绝
  string handle_time = 12; //处理时间
  string product_pic = 13; //商品图片
  string product_name = 14; //商品名称
  string product_brand = 15; //商品品牌
  string product_attr = 16; //商品销售属性：颜色：红色；尺码：xl;
  int32 product_count = 17; //退货数量
  int64 product_price = 18; //商品单价
  int64 product_real_price = 19; //商品实际支付单价
  string reason = 20; //原因
  string description = 21; //描述
  string proof_pics = 22; //凭证图片，以逗号隔开
  string handle_note = 23; //处理备注
  string handle_man = 24; //处理人员
  string receive_man = 25; //收货人
  string receive_time = 26; //收货时间
  string receive_note = 27; //收货备注

}

message AddOrderReturnApplyResp {
  string pong = 1;
}

// 删除订单退货申请
message DeleteOrderReturnApplyReq {
  repeated int64 ids = 1;
}

message DeleteOrderReturnApplyResp {
  string pong = 1;
}

// 更新订单退货申请
message UpdateOrderReturnApplyReq {
  int64 company_address_id = 1; //收货地址表id
  string handle_man =2; //处理人员
  string handle_note = 3; //处理备注
  int64 id = 4; //
  string receive_man = 5; //收货人
  string receive_note = 6; //收货备注
  int64 return_amount = 7; //退款金额
  int32 status = 8; //申请状态：0->待处理；1->退货中；2->已完成；3->已拒绝

}

message UpdateOrderReturnApplyResp {
  string pong = 1;
}

// 查询订单退货申请详情
message QueryOrderReturnApplyDetailReq {
    int64 id = 1;
}

message QueryOrderReturnApplyDetailResp {
  int64 id = 1; //
  int64 order_id = 2; //订单id
  int64 company_address_id = 3; //收货地址表id
  int64 product_id = 4; //退货商品id
  string order_sn = 5; //订单编号
  string create_time = 6; //申请时间
  string member_username = 7; //会员用户名
  int64 return_amount = 8; //退款金额
  string return_name = 9; //退货人姓名
  string return_phone = 10; //退货人电话
  int32 status = 11; //申请状态：0->待处理；1->退货中；2->已完成；3->已拒绝
  string handle_time = 12; //处理时间
  string product_pic = 13; //商品图片
  string product_name = 14; //商品名称
  string product_brand = 15; //商品品牌
  string product_attr = 16; //商品销售属性：颜色：红色；尺码：xl;
  int32 product_count = 17; //退货数量
  int64 product_price = 18; //商品单价
  int64 product_real_price = 19; //商品实际支付单价
  string reason = 20; //原因
  string description = 21; //描述
  string proof_pics = 22; //凭证图片，以逗号隔开
  string handle_note = 23; //处理备注
  string handle_man = 24; //处理人员
  string receive_man = 25; //收货人
  string receive_time = 26; //收货时间
  string receive_note = 27; //收货备注

}

// 分页查询订单退货申请列表
message QueryOrderReturnApplyListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  string handle_man = 3; //处理人员
  string member_username = 4; //会员用户名
  string order_sn = 5; //订单编号
  string handle_time = 6; //处理时间
  int32 status = 7; //申请状态：0->待处理；1->退货中；2->已完成；3->已拒绝
  string create_time = 8; //申请时间
  string return_name = 9; //退货人姓名
  string return_phone = 10; //退货人电话
}

message OrderReturnApplyListData {
  int64 id = 1; //
  int64 order_id = 2; //订单id
  int64 company_address_id = 3; //收货地址表id
  int64 product_id = 4; //退货商品id
  string order_sn = 5; //订单编号
  string create_time = 6; //申请时间
  string member_username = 7; //会员用户名
  int64 return_amount = 8; //退款金额
  string return_name = 9; //退货人姓名
  string return_phone = 10; //退货人电话
  int32 status = 11; //申请状态：0->待处理；1->退货中；2->已完成；3->已拒绝
  string handle_time = 12; //处理时间
  string product_pic = 13; //商品图片
  string product_name = 14; //商品名称
  string product_brand = 15; //商品品牌
  string product_attr = 16; //商品销售属性：颜色：红色；尺码：xl;
  int32 product_count = 17; //退货数量
  int64 product_price = 18; //商品单价
  int64 product_real_price = 19; //商品实际支付单价
  string reason = 20; //原因
  string description = 21; //描述
  string proof_pics = 22; //凭证图片，以逗号隔开
  string handle_note = 23; //处理备注
  string handle_man = 24; //处理人员
  string receive_man = 25; //收货人
  string receive_time = 26; //收货时间
  string receive_note = 27; //收货备注

}

message QueryOrderReturnApplyListResp {
  int64 total = 1;
  repeated  OrderReturnApplyListData list = 2;
}

// 订单退货申请
service OrderReturnApplyService {
  // 添加订单退货申请
  rpc AddOrderReturnApply(AddOrderReturnApplyReq) returns (AddOrderReturnApplyResp){}
  // 删除订单退货申请
  rpc DeleteOrderReturnApply(DeleteOrderReturnApplyReq) returns (DeleteOrderReturnApplyResp){}
  // 更新订单退货申请
  rpc UpdateOrderReturnApply(UpdateOrderReturnApplyReq) returns (UpdateOrderReturnApplyResp ){}
  // 查询订单退货申请详情
   rpc QueryOrderReturnApplyDetail(QueryOrderReturnApplyDetailReq) returns (QueryOrderReturnApplyDetailResp){}
  // 查询订单退货申请列表
  rpc QueryOrderReturnApplyList(QueryOrderReturnApplyListReq) returns (QueryOrderReturnApplyListResp){}


}
