syntax = "proto3";

package main;

option go_package = "./proto";

// 添加优惠券使用、领取历史表
message AddCouponHistoryReq {
  int64 id = 1; //
  int64 coupon_id = 2; //优惠券id
  int64 member_id = 3; //会员id
  string coupon_code = 4; //优惠码
  string member_nickname = 5; //领取人昵称
  int32 get_type = 6; //获取类型：0->后台赠送；1->主动获取
  int32 use_status = 8; //使用状态：0->未使用；1->已使用；2->已过期
}

message AddCouponHistoryResp {
  string pong = 1;
}

// 删除优惠券使用、领取历史表
message DeleteCouponHistoryReq {
  repeated int64 ids = 1;
}

message DeleteCouponHistoryResp {
  string pong = 1;
}

// 更新优惠券使用、领取历史表
message UpdateCouponHistoryReq {
  int64 id = 1; //
  int64 coupon_id = 2; //优惠券id
  int64 member_id = 3; //会员id
  string coupon_code = 4; //优惠码
  string member_nickname = 5; //领取人昵称
  int32 get_type = 6; //获取类型：0->后台赠送；1->主动获取
  int32 use_status = 8; //使用状态：0->未使用；1->已使用；2->已过期
  string use_time = 9; //使用时间
  int64 order_id = 10; //订单编号
  string order_sn = 11; //订单号码
}

message UpdateCouponHistoryResp {
  string pong = 1;
}

// 更新优惠券使用、领取历史表状态
message UpdateCouponHistoryStatusReq {
  int64 coupon_id = 1; //优惠券id
  int64 member_id = 2; //会员id
  int32 use_status = 3; //使用状态：0->未使用；1->已使用；2->已过期


}

message UpdateCouponHistoryStatusResp {
  string pong = 1;
}

// 查询优惠券使用、领取历史表详情
message QueryCouponHistoryDetailReq {
    int64 id = 1;
}

message QueryCouponHistoryDetailResp {
  int64 id = 1; //
  int64 coupon_id = 2; //优惠券id
  int64 member_id = 3; //会员id
  string coupon_code = 4; //优惠码
  string member_nickname = 5; //领取人昵称
  int32 get_type = 6; //获取类型：0->后台赠送；1->主动获取
  string create_time = 7; //领取时间
  int32 use_status = 8; //使用状态：0->未使用；1->已使用；2->已过期
  string use_time = 9; //使用时间
  int64 order_id = 10; //订单编号
  string order_sn = 11; //订单号码

}

// 分页查询优惠券使用、领取历史表列表
message QueryCouponHistoryListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  int64 coupon_id = 3; //优惠券id
  int64 member_id = 4; //会员id
  string order_sn = 5; //订单号码
  int32 use_status = 6; //使用状态：0->未使用；1->已使用；2->已过期

}

message CouponHistoryListData {
  int64 id = 1; //
  int64 coupon_id = 2; //优惠券id
  int64 member_id = 3; //会员id
  string coupon_code = 4; //优惠码
  string member_nickname = 5; //领取人昵称
  int32 get_type = 6; //获取类型：0->后台赠送；1->主动获取
  string create_time = 7; //领取时间
  int32 use_status = 8; //使用状态：0->未使用；1->已使用；2->已过期
  string use_time = 9; //使用时间
  int64 order_id = 10; //订单编号
  string order_sn = 11; //订单号码

}

message QueryCouponHistoryListResp {
  int64 total = 1;
  repeated  CouponHistoryListData list = 2;
}

message QueryCouponCountReq {
  int64 memberId = 1;
}
message QueryCouponCountResp {
  int64 total = 1;
}

message QueryMemberCouponListReq {
  int64 memberId = 1;
  int32  UseStatus = 2;
}
message QueryCouponData {
  int64 id = 1; //
  int32 type = 2; //优惠券类型；0->全场赠券；1->会员赠券；2->购物赠券；3->注册赠券
  string name = 3; //名称
  int32 platform = 4; //使用平台：0->全部；1->移动；2->PC
  int32 count = 5; //数量
  int64 amount = 6; //金额
  int32 per_limit = 7; //每人限领张数
  int64 min_point = 8; //使用门槛；0表示无门槛
  string start_time = 9; //开始时间
  string end_time = 10; //结束时间
  int32 use_type = 11; //使用类型：0->全场通用；1->指定分类；2->指定商品
  string note = 12; //备注
  int32 publish_count = 13; //发行数量
  int32 use_count = 14; //已使用数量
  int32 receive_count = 15; //领取数量
  string enable_time = 16; //可以领取的日期
  string code = 17; //优惠码
  int32 member_level = 18; //可领取的会员类型：0->无限时

}
message QueryMemberCouponListResp {
  repeated  QueryCouponData list = 1;
}

message QueryCouponHistoryDetailListReq {
  int64      MemberId = 1;
}
message QueryCouponProductCategoryRelationListData{
  int64  Id = 1;
  int64  CouponId = 2;
  int64  ProductCategoryId = 3;
  string  ProductCategoryName = 4;
  string  ParentCategoryName = 5;

}
message QueryCouponProductRelationListData{
  int64    Id = 1;
  int64    CouponId = 2;
  int64    ProductId = 3;
  string  ProductName = 4;
  string  ProductSn = 5;

}
message CouponHistoryDetailListData{
  CouponHistoryListData couponHistoryListData = 1;//用户领取的优惠券
  QueryCouponData couponListData = 2;//优惠券
  repeated  QueryCouponProductRelationListData productRelationList = 3;//商品和优惠券的关联关糸
  repeated  QueryCouponProductCategoryRelationListData categoryRelationList = 4;//商品分类和优惠券的关联关糸
}

message CouponHistoryDetailListResp {
  repeated  CouponHistoryDetailListData list = 2;
}

// 优惠券使用、领取历史表
service CouponHistoryService {
  // 添加优惠券使用、领取历史表
  rpc AddCouponHistory(AddCouponHistoryReq) returns (AddCouponHistoryResp){}
  // 删除优惠券使用、领取历史表
  rpc DeleteCouponHistory(DeleteCouponHistoryReq) returns (DeleteCouponHistoryResp){}
  // 更新优惠券使用、领取历史表
  rpc UpdateCouponHistory(UpdateCouponHistoryReq) returns (UpdateCouponHistoryResp ){}
  // 更新优惠券使用、领取历史表状态
  rpc UpdateCouponHistoryStatus(UpdateCouponHistoryStatusReq) returns (UpdateCouponHistoryStatusResp ){}
  // 查询优惠券使用、领取历史表详情
   rpc QueryCouponHistoryDetail(QueryCouponHistoryDetailReq) returns (QueryCouponHistoryDetailResp){}
  // 查询优惠券使用、领取历史表列表
  rpc QueryCouponHistoryList(QueryCouponHistoryListReq) returns (QueryCouponHistoryListResp){}

  //登录时获取用户还没有使用的获取优惠券数量
  rpc QueryCouponCount(QueryCouponCountReq) returns(QueryCouponCountResp);
  //获取会员优惠券
  rpc QueryMemberCouponList(QueryMemberCouponListReq) returns(QueryMemberCouponListResp);
  //获取该用户所有优惠券(包括商品和优惠券,商品分类和优惠券的关联关糸)
  rpc QueryCouponHistoryDetailList(QueryCouponHistoryDetailListReq) returns(CouponHistoryDetailListResp);
}
